        provided by Emacs built-in make file support.
    - New: PEL provides two commands to navigate across make file macro
      definition statements (they can also be used to count them):
      - *pel-make-previous-macro*, bound to ``<f12> <M-up>`` and ``<M-f12>
        <M-up>``.
      - *pel-make-next-macro*, bound to ``<f12> <M-down>`` and ``<M-f12>
        <M-down>`.
  - New: *Tup file editing support*:
    - Support for *Tup* files activated by the *pel-use-tup* user-option.
- Update: *Comments*:
  - New: command *pel-comment-show-variables* (bound to ``<f11> ; ?``) opens a
    special "\*comment-vars\*" buffer and prints the names and values of all
    Emacs variables used to control the behaviour of comment generation. If a
    prefix is specified it only prints the user option variables (the ones
    that can be customized).
- Update: *Cross Referencing support*:
  - PEL's goals is to provide easy access to multiple indexing and
    cross-referencing systems.  Once a system is enabled via the appropriate
    PEL user option, it is possible to activate its mode or turn it off using
    one of the commands PEL provide.
    - PEL provides the *pel-xref-show-status* command to display the state of
      the indexing/cross-referencing modes.  It is bound to ``<f11> X ?``.  By
      default it prints a message at the bottom of the screen.  When invoked
      with any prefix argument it prints the information inside a
      ``*xref-status*`` buffer.
      - It becomes easy to try different indexing systems; these systems are
        often complementary and often viable alternatives to active Language
        Server systems.  Note that PEL will also support Language Servers and
        will identify good set of tools for each of the programming languages
        it will support.
  - Modified: PEL key binding for *xref-find-apropos*: the new key sequence is
    ``<f11> X a`` instead of ``<f11> X .`` which is now reserved for major mode